--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "ts-jest": "^29.1.2"
-    }
+    },
+    "dependencies": {}
 }
