--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "CommonJS",
+    "target": "ES6",
+    "module": "ES2020",
     "lib": ["es5", "es2015", "dom", "es2015.promise"],
     "moduleResolution": "node",
     "declaration": true,
@@ -15,6 +15,6 @@
     "noFallthroughCasesInSwitch": true
     // "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["tests/**/*.ts"]
+  "include": ["src"],
+  "exclude": ["tests"]
 }
