--- a/.github/workflows /publish.yml
+++ b/.github/workflows /publish.yml
@@ -1,27 +1,25 @@
-name: Release
+name: npm package publish
 
 on:
   push:
     branches:
       - main
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
-
 jobs:
-  release:
-    name: Release
+  build:
+    name: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-
+a
       - name: Setup Node.js 20.x
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
 
       - name: Install Dependencies
-        run: tsc
+        run: npm run build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
