--- a/.github/workflows /publish.yml
+++ b/.github/workflows /publish.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Use Node.js 16
-        uses: actions/setup-node@v3
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 16  # Update if needed for your project
+          node-version: 20.x  # Update if needed for your project
 
       - name: Install dependencies
         run: npm install
