--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,19 +8,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest  # Or the desired OS for your project
     steps:
+      - name: Use Node.js 20
       - uses: actions/checkout@v4
-
-      - name: Use Node.js 16
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20.x  # Update if needed for your project
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build (if necessary)
-        run: npm run build  # Replace with your build command if applicable
-
+          node-version: 20
+      - run: npm ci
+        # run: npm install
+        run: npm run build 
       - name: Authenticate to npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}  # Replace with your secret name
