--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,26 +2,29 @@ name: Publish NPM Package
 
 on:
   push:
-    branches: [ main ]  # Adjust branch(es) to trigger publishing
-
+    branches:
+      - main
 jobs:
   publish:
-    runs-on: ubuntu-latest  # Or the desired OS for your project
+    name: publish
+    runs-on: ubuntu-latest
     steps:
-      - name: Use Node.js 20
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci
-        # run: npm install
-        run: npm run build 
-      - name: Authenticate to npm
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}  # Replace with your secret name
-        run: npm whoami
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-      - name: Publish to npm
-        run: npm publish
+      - name: Setup Node.js 20.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Create Release Pull Request or Publish to npm
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: npm publish  --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
