--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,30 +1,25 @@
-name: Publish NPM Package
+name: Publish npm Package
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+
 jobs:
   publish:
-    name: publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js 20.x
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Create Release Pull Request or Publish to npm
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: npm publish  --access public
+          node-version: 20
+      - name: Install dependencies
+        run: npm ci
+      - name: Build package
+        run: npm run build  # Replace with your build command
+      - name: Login to npm
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm login --registry=https://registry.npmjs.org/ --legacy-peer-deps
+      - name: Publish package
+        run: npm publish
