--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es5", "es2015", "dom", "es2015.promise"],
     "moduleResolution": "node",
     "declaration": true,
+    // "declarationDir": "declaration",
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
