--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,12 +8,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Install dependencies
+          node-version: 20.x
+      - name: Compile typescript
         run: npm ci
       - name: Build package
         run: npm run build  # Replace with your build command
@@ -22,4 +22,4 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm login --registry=https://registry.npmjs.org/ --legacy-peer-deps
       - name: Publish package
-        run: npm publish
+        run: npm publish  --access public
