update: npm-publish.yml +1

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,25 +1,19 @@
-name: Publish npm Package
-
+name: Publish Package to npmjs
 on:
   push:
     branches: [ main ]
-
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-      - name: Compile typescript
-        run: npm ci
-      - name: Build package
-        run: npm run build  # Replace with your build command
-      - name: Login to npm
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      - run: npm ci
+      - run: npm run build
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm login --registry=https://registry.npmjs.org/ --legacy-peer-deps
-      - name: Publish package
-        run: npm publish  --access public
