--- a/.github/workflows/new-publish.yml
+++ b/.github/workflows/new-publish.yml
@@ -1,4 +1,3 @@
-
 name: Node.js Package
 
 on:
@@ -12,10 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 18
       - run: npm ci
       - run: npm test
 
@@ -23,8 +22,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
@@ -38,8 +37,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
@@ -51,7 +50,7 @@ jobs:
             const fs = require('fs').promises;
             fs.readFile('package.json', 'utf8').then(data => JSON.parse(data)).then(json => {
               console.log(json);
-                json.name = json.name.replace('@667', '@june07');
+                json.name = json.name.replace('@', '@june07');
                 console.info('Package name changed to %s', json.name);
                 return fs.writeFile('package.json', JSON.stringify(json), 'utf8');
             }).catch(error => {
