--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "devDependencies": {
         "@types/jest": "^29.5.12",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "ts-jest": "^29.1.2"
-    },
-    "dependencies": {}
+    }
 }
