--- a/.github/workflows/new-publish.yml
+++ b/.github/workflows/new-publish.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-      - master
 
 jobs:
   build:
@@ -15,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm ci
+      - run: npm install
       - run: npm test
 
   publish-npm:
@@ -43,21 +42,8 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@june07'
-      - run: npm ci
+      - run: npm install
       - run: echo "registry=https://npm.pkg.github.com" >> .npmrc
-      - run: |
-          node <<EOF
-            const fs = require('fs').promises;
-            fs.readFile('package.json', 'utf8').then(data => JSON.parse(data)).then(json => {
-              console.log(json);
-                json.name = json.name.replace('@', '@june07');
-                console.info('Package name changed to %s', json.name);
-                return fs.writeFile('package.json', JSON.stringify(json), 'utf8');
-            }).catch(error => {
-                console.error(error);
-                process.exit(1);
-            });
-          EOF
       - run: npm build
       - run: npm publish
         env:
