--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -1,12 +1,12 @@
-name: Node.js Package
+name: Node.js Publish Package
 
 on:
 
-  workflow_dispatch:
+  # workflow_dispatch:
 
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
 
   release:
     types: [published]
