modified:   package.json 	modified:   src/storage.ts 	new file:   src/theme.ts

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "utilities",
         "javascript utilities",
         "utils",
-        "appsaeed"
+        "appsaeed",
+        "javascript theme",
+        "js themeing"
     ],
     "author": "appsaeed",
     "license": "MIT",
